--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 TODO:
 -- add readme
+
+# License
+
+html5magazine is is licensed under the terms of the MIT License, see the included MIT-LICENSE file.
