--- a/README
+++ b/README
@@ -3,4 +3,4 @@ TODO:
 
 # License
 
-html5magazine is is licensed under the terms of the MIT License, see the included MIT-LICENSE file.
+html5magazine is licensed under the terms of the MIT License, see the included MIT-LICENSE file.
